# PuncturedFEM

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  README.md  TODO.md  ex0-mesh-building.ipynb  ex1-inner-prod.ipynb  ex1a-square-hole.ipynb  ex1b-pacman.ipynb  ex1c-ghost.ipynb  main.m  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
LocalLinearSystem/: LocalRHS.m  LocalStiffnessMassMatrices.m
PuncturedDomainHigherOrderQuadrature/: AntiLaplacianHarmonic.m  AntiLaplacianHarmonicMultiplyConnected.m  AntiLaplacianHarmonicSimplyConnected.m  Dirichlet2Neumann.m  FFT_antiderivative.m  FFT_derivative_boundary_trace.m  GetTraceFromNeumannData.m  HarmonicConjugateFromDoubleLayerDensity.m  HarmonicConjugateTrace.m  InnerProductWithPolynomial.m  InnerProducts.m  LogarithmicAntiLaplacian.m  LogarithmicGradient.m  LogarithmicTraces.m  LogarithmicValues.m  LogarithmicWeightedNormalDerivative.m  SolveNeumannProblem.m  TraceFromTangentialDerivative.m  XYLogarithmicGradient.m  XYLogarithmicNormalDerivative.m  XYLogarithmicTraces.m  XYLogarithmicValues.m  check_existence_nuemann_problem.m
builders/: BuildElement.m  BuildQuads.m
classes/: class_element.m  class_fem_solver.m  class_interior_values.m  class_local_function_space.m  class_poly.m  class_quad.m  class_uniform_mesh_square_domain.m
devtools/: convert_examples.sh
doc/: CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  ROADMAP.md  TODO.md  WISHLIST.md  index.md  requirements.in  requirements.txt
examples/: 1.1-square-hole.ipynb  1.2-pacman.ipynb  1.3-ghost.ipynb  1.4-hat-tile.ipynb  1.5-spacefilling.ipynb  2.1-pacman-fem.ipynb  2.2-pegboard.ipynb  Spacefilling.ipynb  Spacefilling.py  ex0-mesh-building.ipynb  ex0-mesh-building.py  ex0.1-mesh-building.ipynb  ex0.2-trace.ipynb  ex0a-mesh-building.ipynb  ex0a-mesh-building.py  ex0b-trace.ipynb  ex0b-trace.py  ex1.1-square-hole.ipynb  ex1.2-pacman.ipynb  ex1.3-ghost.ipynb  ex1.4-hat-tile.ipynb  (+14 more)
(+187 files in other folders)
